Sample Apps WebMVC user API